--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head><link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
-    <title>GREAT innovation THINKING</title>
+    <title>Great Innovation Thinking</title>
   </head>
   <body>
     <h1>New Inovation thinking</h1>
