--- a/form.html
+++ b/form.html
@@ -42,7 +42,7 @@
     <td><input type="number" id="fname" name="fname" ></td>
     </tr>
     </table>
-    <input type="submit"  action="mailto:deepakkumarverma9999@gmail.com"  name="" value="submit">
+    <input type="submit"  action="mailto:deepakkumarverma9999@gmail.com"  name="submit" value="submit">
   </form>
   <div class="copyright">
     <p>copyright@deepak(NewInnovationThinking)</p>
